[package]
name = "invaders"
version = "0.1.0"
authors = ["Patrick Gannon <gannon.patrick01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
rusty_audio = "1.1.5"
rusty_time = "0.11.0"
